force-app/main/default/objects/ampi__AddResults__c/ampi__AddResults__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Add Results</label>
</CustomObject>