force-app/main/default/objects/ampi__AddResults__c/fields/ampi__Disable_Geographic_Area_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>ampi__Disable_Geographic_Area_Hierarchy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the geographic area hierarchy will no longer display in the dropdown picklist on Add Results. All geographic areas in the project will display in alphabetically ascending order by Name.</description>
    <inlineHelpText>When checked, the geographic area hierarchy will no longer display in the dropdown picklist on Add Results. All geographic areas in the project will display in alphabetically ascending order by Name.</inlineHelpText>
    <label>Disable Geographic Area Hierarchy</label>
    <type>Checkbox</type>
</CustomField>