force-app/main/default/objects/ampi__AddResults__c/fields/ampi__Display_Targets__c.field-meta.xml
<CustomField>
    <fullName>ampi__Display_Targets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Targets?</label>
    <type>Checkbox</type>
</CustomField>