force-app/main/default/objects/ampi__AddResults__c/fields/ampi__Round_Off_Digits_For_Large_Numbers__c.field-meta.xml
<CustomField>
    <fullName>ampi__Round_Off_Digits_For_Large_Numbers__c</fullName>
    <defaultValue>2</defaultValue>
    <description>This field controls the number of digits a large number (1 million and above) is round off to, and displayed on the Set Targets table.</description>
    <inlineHelpText>Use this field to define the round-off digits to be displayed for large numbers (&gt; 1 million) in the view-only mode (e.g. submitted results, viewing targets on Add Results page etc.) on the Add Results page. Please assign a value from 0 to 5 only.</inlineHelpText>
    <label>Round Off Digits For Large Numbers</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>